--- a/README
+++ b/README
@@ -3,3 +3,5 @@ HadoopCL: Automatic native execution of Hadoop computation on OpenCL devices
 author: Max Grossman, jmaxg3@gmail.com
 
 sponsors: Rice University, AMD
+
+TODO: code overview
